Adding Comments in the index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <!-- A simple start -->
+
     <div class="container">
         <input type="text" placeholder="Search" />
         <button>
